--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="Bodbod" >
           
       <!-- Column 1-->
-      <div class="mainColumn" >
+      <div class="mainColumn" id="scroller">
 
         <div class="vector" >
         <div class="vectorContent">
@@ -35,21 +35,21 @@
         </div>
         </div>
 
-        <div class="blockColumn" style=" flex: 1;">
+        <div class="blockColumn"  style=" flex: 1;">
           <div class="marqueeContainer" >
             <marquee  direction="left"><p>A Network To Practice</p></marquee> 
             <p>About The Body</p>
           </div>
 
-          <div class="ScrollVert" id="scroller" style=" flex: 4;">
+          <div class="ScrollVert"  style=" flex: 4;">
             <p>Statment</p>
-            <p style="padding: 5%;font-size: 10pt;">Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsumLorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+            <p style="padding: 5%;font-size: 12pt;">DBAN development is based on the premise that research into digital art and cultural production is necessarily practice based because much of the outputs in this area examine and negotiate ways in which we use and abuse communication media and technology. The application of new methods and new critical ways of interacting with media is a central pillar of digital art history and contemporary manifestations. DBAN is currently working to develop an interactive component to this website that will serve as a forum and a space for members to communicate, share ideas, collaborate, and help each other with various aspects of the production of content, technologies, software, artworks, exhibitions etc. </p>
 
           </div>
 
           <div class="ScrollVert"  style=" flex: 4;">
-            <p>Wiki Intro</p>
-            <p style="padding: 5%;font-size: 10pt;">Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsumLorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+            <p>Wiki Coming</p>
+            <p style="padding: 5%;font-size: 12pt;">Soon you can join our wiki community to collaboratively develop research with the rest of the community! </p>
 
           </div>
 
@@ -57,7 +57,7 @@
       </div>
 
       <!-- Column 2-->
-      <div class="mainColumn" >
+      <div class="mainColumn" id="scroller">
 
         <div class="vector" >
           <div class="vectorContent">
@@ -75,21 +75,17 @@
   
             <div class="ScrollVert" id="scroller" style=" flex: 4;">
               <p>Join The Network</p>
-              <p style="padding: 5%;font-size: 10pt;">Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsumLorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
-  
+              <p style="padding: 5%;font-size: 12pt;">The network exists for the sharing of visions, speculations, ideas, applications and technologies among practitioners, artists, curators and academics. The sharing of resources, outputs, thoughts, questions and knowledge are what we hope would drive the network’s members’ activity. We are constructing this network in consultation and full participation of our members. We offer a platform for collaboration and the initiation of ideas. The network is member-led, and based on an open access and open source approaches to the sharing of technological knowledge. The network is also dedicated to sharing alternative resources for digital production and resources. In our first year, we worked in collaboration with arebyte gallery, offsite projects and MA students to construct a first point of departure to a collection of resources we hope to make available to our extending network. Its called The Beta Toolkit, and it offers resources and tools for the curation of Net.Art. The project isn’t finished yet, but you can already access some of the research outputs we’ve produced.</p>
+              <p style="padding: 5%;font-size: 12pt;">More on the Beta Toolkit: <a href="https://www.arebyte.com/beta-toolkit">arebyte.com/beta-toolkit</a></p>
             </div>
   
-            <div class="ScrollVert"  style=" flex: 4;">
-              <p>Add Something</p>
-              <p style="padding: 5%;font-size: 10pt;">Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsumLorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
-  
-            </div>
+
           </div>
 
       </div>
     
       <!-- Column 3-->
-      <div class="mainColumn" >
+      <div class="mainColumn" id="scroller">
 
         <div class="vector" >
           <div class="vectorContent">
@@ -99,19 +95,20 @@
 
           <div class="blockColumn" style=" flex: 1;">
             <div class="marqueeContainer" >
-              <marquee  direction="left"><p>A Network To Recieve</p></marquee> 
+              <marquee  direction="left"><p>A Network To Explore</p></marquee> 
               <p>From The Body</p>
             </div>
   
             <div class="ScrollVert" id="scroller" style=" flex: 4;">
               <p>Research</p>
-              <p style="padding: 5%;font-size: 10pt;">Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsumLorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
-  
+              <p style="padding: 5%;font-size: 10pt;">DBAN is a research network focusing on the advancement of knowledge exchange and production in the field of digital art. DBAN is one year old, and is currently in stages of developing the platforms, infrastructures and networks that will hold the networks’ activity across different platforms and venues. At this stage, the network’s research focus is on three main questions: How can we put structures in place to make sure we construct a diverse, inclusive and caring network? How could this network support its members and the research they would like to advance? How do we understand the word “British” in relation to a network of practitioners who are working with digital tools, and whose network extend far beyond a singular geographical location? What forms of mapping can help us understand better the potential activity of such a network? And what interventions would be beneficial for the community we are building? </p>
+              <p style="padding: 5%;font-size: 10pt;">More on our current research focus on intergenerational communication gaps and their impact on the construction of the history of the digital  <a href="https://www.arebyte.com/beta-toolkit">HERE</a></p>
+
             </div>
   
             <div class="ScrollVert"  style=" flex: 4;">
-              <p>Opportunities</p>
-              <p style="padding: 5%;font-size: 10pt;">Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsumLorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+              <p>Keep Updated</p>
+              <p style="padding: 5%;font-size: 12pt;">What to be notified of future events and actions from DBAN and join the network? Please fill in the form <a href="https://cryptpad.fr/form/#/2/form/view/Wy-NtiQzLtSEeQIes1uHHES5bw5-76toMFlRextzKn0/">HERE</a> and we will keep you updated.</p>
   
             </div>
           </div>
