--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Sketch</title>
+    <link rel="icon" href="./imgs/Logo.png">
+    <title>DBAN</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -101,8 +101,8 @@
   
             <div class="ScrollVert" id="scroller" style=" flex: 4;">
               <p>Research</p>
-              <p style="padding: 5%;font-size: 10pt;">DBAN is a research network focusing on the advancement of knowledge exchange and production in the field of digital art. DBAN is one year old, and is currently in stages of developing the platforms, infrastructures and networks that will hold the networks’ activity across different platforms and venues. At this stage, the network’s research focus is on three main questions: How can we put structures in place to make sure we construct a diverse, inclusive and caring network? How could this network support its members and the research they would like to advance? How do we understand the word “British” in relation to a network of practitioners who are working with digital tools, and whose network extend far beyond a singular geographical location? What forms of mapping can help us understand better the potential activity of such a network? And what interventions would be beneficial for the community we are building? </p>
-              <p style="padding: 5%;font-size: 10pt;">More on our current research focus on intergenerational communication gaps and their impact on the construction of the history of the digital  <a href="https://www.arebyte.com/beta-toolkit">HERE</a></p>
+              <p style="padding: 5%;font-size: 12pt;">DBAN is a research network focusing on the advancement of knowledge exchange and production in the field of digital art. DBAN is one year old, and is currently in stages of developing the platforms, infrastructures and networks that will hold the networks’ activity across different platforms and venues. At this stage, the network’s research focus is on three main questions: How can we put structures in place to make sure we construct a diverse, inclusive and caring network? How could this network support its members and the research they would like to advance? How do we understand the word “British” in relation to a network of practitioners who are working with digital tools, and whose network extend far beyond a singular geographical location? What forms of mapping can help us understand better the potential activity of such a network? And what interventions would be beneficial for the community we are building? </p>
+              <p style="padding: 5%;font-size: 12pt;">More on our current research focus on intergenerational communication gaps and their impact on the construction of the history of the digital  <a href="https://www.arebyte.com/beta-toolkit">HERE</a></p>
 
             </div>
   
