--- a/index.html
+++ b/index.html
@@ -11,16 +11,19 @@
 
   <body style="width: 100%; height:100%;">
 
-    <!-- logo-->
-    <div  class="baseBlock" style="background-color: cadetblue; height:100%; width:100%;  display: flex; ; align-content: center; align-items: center; justify-content: center; flex-direction: column;">
-      <img  src="./imgs/Logo.png" class="intro"  style=" display: flex; ">
-    </div>
+ 
 
 
     <a href="./index.html">
       <img class="logo" src="./imgs/Logo.png" alt="The Logo For British Digital Art Network">
     </a>
 
+
+    <div class="join">
+
+      <p style="text-align: center; color: #d9dbde;"> Join Us <a style="color: #88898a;" href="https://cryptpad.fr/form/#/2/form/view/Wy-NtiQzLtSEeQIes1uHHES5bw5-76toMFlRextzKn0/">HERE</a></p>
+
+    </div>
 
     <!-- Body-->
     <div class="Bodbod" >
