--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Join button -->
     <div class="join">
 
-      <h2 style="text-align: center; color: #d9dbde;"> Join Us <a style="color: #88898a;" href="https://cryptpad.fr/form/#/2/form/view/Wy-NtiQzLtSEeQIes1uHHES5bw5-76toMFlRextzKn0/">HERE</a></h2>
+      <h2 style="text-align: center; color: #d9dbde;"> Join Us <a style="color: #88898a;" href="https://cryptpad.organise.earth/form/#/2/form/view/4YBwJMF+Cg9Vd0YLkJNX7Ip+l9+IUEsnF1Mymp3eli0/">HERE</a></h2>
 
     </div>
 
@@ -38,7 +38,7 @@
 
         <div class="vector" >
           <div class="vectorContent" id="vec1">
-            <script src="sketch.js"></script>
+            <img src="imgs/Punxh_gif.gif" />
             
           </div>
         </div>
@@ -56,8 +56,8 @@
           </div>
 
           <div class="ScrollVert"  style=" flex: 4;">
-            <h2>Wiki Coming</h2>
-            <p class="mainText">Soon you can join our wiki community to collaboratively develop research with the rest of the community! </p>
+            <h2>D-BAN Wiki</h2>
+            <p class="mainText"> Sign up to our wiki <a href="https://wiki.b-dan.net/index.php/About">HERE</a></p>
 
           </div>
 
@@ -69,6 +69,12 @@
 
         <div class="vector" >
           <div class="vectorContent" id="vec2">
+            <video width="320" height="240" autoplay loop muted>
+              <source src="/vids/Koyuri_Sato.mp4" type="video/mp4" />
+              <source src="movie.ogg" type="video/ogg" />
+              Your browser does not support the video tag.
+            </video>
+            
             <!--<video autoplay muted loop>
               <source src="./vids/Sound-Space 2020-01-26 16-54-44.mp4" type="video/mp4" />
           </video>-->
